--- a/components/slider-fade/style.css
+++ b/components/slider-fade/style.css
@@ -1,5 +1,5 @@
 /* ---------- フェードスライダー ---------- */
-/* フェードスライダー全体の枠設定 */
+/* スライダー全体の枠設定 */
 .slider-fade {
   position: relative;
   width: 100%; /* 横幅 */
