--- a/shared/animations-io.css
+++ b/shared/animations-io.css
@@ -16,7 +16,7 @@
   transition: transform 0.5s ease-out;
 }
 .expand.show {
-  transform: scale(1); /* 2倍のサイズに拡大 */
+  transform: scale(1); /* 元の大きさ */
 }
 
 /* スライドイン（左から） */
