--- a/components/heading/index.html
+++ b/components/heading/index.html
@@ -23,6 +23,11 @@
         <h3>見出し02</h3>
         <p>heading-02</p>
     </div>
+    
+    <h2 class="heading-01">
+  <span class="heading-main">サービス</span>
+  <span class="heading-sub">Service</span>
+</h2>
 </body>
 
 </html>
