--- a/components/about-01/index.html
+++ b/components/about-01/index.html
@@ -14,10 +14,10 @@
     <section class="about-01">
         <div class="about-01__content">
             <!-- --- 見出し01 --- -->
-            <div class="heading-01">
-                <p>会社案内</p>
-                <h3>About Us</h3>
-            </div>
+            <h2 class="heading-01">
+                <span class="heading-sub">会社案内</span>
+                <span class="heading-main">About us</span>
+            </h2>
             <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。
             </p>
         </div>
@@ -27,24 +27,24 @@
             <!-- ---------- フェードスライダー1 ---------- -->
             <div class="slider-fade img-1">
                 <!-- ▼ ここに表示したい画像を追加または差し替え -->
-                <img src="../../assets/sample-01.jpg" class="slide-item" />
-                <img src="../../assets/sample-02.jpg" class="slide-item" />
+                <img src="../../assets/sample-01.webp" class="slide-item" />
+                <img src="../../assets/sample-02.webp" class="slide-item" />
             </div>
             <!-- ---------- /フェードスライダー1 ---------- -->
 
             <!-- ---------- フェードスライダー2 ---------- -->
             <div class="slider-fade img-2">
                 <!-- ▼ ここに表示したい画像を追加または差し替え -->
-                <img src="../../assets/sample-03.jpg" class="slide-item" />
-                <img src="../../assets/sample-04.jpg" class="slide-item" />
+                <img src="../../assets/sample-03.webp" class="slide-item" />
+                <img src="../../assets/sample-04.webp" class="slide-item" />
             </div>
             <!-- ---------- /フェードスライダー2 ---------- -->
 
             <!-- ---------- フェードスライダー3 ---------- -->
             <div class="slider-fade img-3">
                 <!-- ▼ ここに表示したい画像を追加または差し替え -->
-                <img src="../../assets/sample-05.jpg" class="slide-item" />
-                <img src="../../assets/sample-06.jpg" class="slide-item" />
+                <img src="../../assets/sample-05.webp" class="slide-item" />
+                <img src="../../assets/sample-06.webp" class="slide-item" />
             </div>
             <!-- ---------- /フェードスライダー3 ---------- -->
         </div>
