--- a/components/card-01/index.html
+++ b/components/card-01/index.html
@@ -23,12 +23,12 @@
         <!-- カードa -->
         <a href="#" class="card-01 card-01--a">
             <div class="card-01__image">
-                <img src="../../assets/sample-01.jpg" alt="">
+                <img src="../../assets/sample-01.webp" alt="">
             </div>
-            <div class="heading-01">
-                <p>POINT</p>
-                <h3>働きやすいポイント</h3>
-            </div>
+            <h2 class="heading-01">
+                <span class="heading-sub">POINT</span>
+                <span class="heading-main">働きやすいポイント</span>
+            </h2>
             <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
             <!-- 右向き矢印アイコン -->
             <svg class="icon-arrow">
@@ -40,12 +40,12 @@
         <!-- カードb -->
         <a href="#" class="card-01 card-01--b">
             <div class="card-01__image">
-                <img src="../../assets/sample-02.jpg" alt="">
+                <img src="../../assets/sample-02.webp" alt="">
             </div>
-            <div class="heading-01">
-                <p>DATA</p>
-                <h3>データで分かる会社</h3>
-            </div>
+            <h2 class="heading-01">
+                <span class="heading-sub">DATA</span>
+                <span class="heading-main">データで分かる会社</span>
+            </h2>
             <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
             <!-- 右向き矢印アイコン -->
             <svg class="icon-arrow">
@@ -57,12 +57,12 @@
         <!-- カードc -->
         <a href="#" class="card-01 card-01--c">
             <div class="card-01__image">
-                <img src="../../assets/sample-03.jpg" alt="">
+                <img src="../../assets/sample-03.webp" alt="">
             </div>
-            <div class="heading-01">
-                <p>CAREERS</p>
-                <h3>募集要項</h3>
-            </div>
+            <h2 class="heading-01">
+                <span class="heading-sub">CAREERS</span>
+                <span class="heading-main">募集要項</span>
+            </h2>
             <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
             <!-- 右向き矢印アイコン -->
             <svg class="icon-arrow">
