--- a/components/service-01/index.html
+++ b/components/service-01/index.html
@@ -25,9 +25,9 @@
             <!-- ---------- フェードスライダー ---------- -->
             <div class="slider-fade">
                 <!-- ▼ ここに表示したい画像を追加または差し替え -->
-                <img src="../../assets/sample-01.jpg" class="slide-item" />
-                <img src="../../assets/sample-02.jpg" class="slide-item" />
-                <img src="../../assets/sample-03.jpg" class="slide-item" />
+                <img src="../../assets/sample-01.webp" class="slide-item" />
+                <img src="../../assets/sample-02.webp" class="slide-item" />
+                <img src="../../assets/sample-03.webp" class="slide-item" />
             </div>
             <!-- ---------- /フェードスライダー ---------- -->
             <div class="service-01__content">
