--- a/components/heading/index.html
+++ b/components/heading/index.html
@@ -11,23 +11,18 @@
 
 <body>
     <!-- --- 見出し01 --- -->
-    <div class="heading-01">
-        <p>見出し01</p>
-        <h3>heading-01</h3>
-    </div>
+    <h2 class="heading-01">
+        <span class="heading-main">サービス</span>
+        <span class="heading-sub">Service</span>
+    </h2>
 
     <div style="height: 100px;"></div>
 
-    <!-- --- 見出し02 --- -->
-    <div class="heading-02">
-        <h3>見出し02</h3>
-        <p>heading-02</p>
-    </div>
-    
     <h2 class="heading-01">
-  <span class="heading-main">サービス</span>
-  <span class="heading-sub">Service</span>
-</h2>
+        <span class="heading-sub">サービス</span>
+        <span class="heading-main">Service</span>
+    </h2>
+
 </body>
 
 </html>
