--- a/components/service-02/style.css
+++ b/components/service-02/style.css
@@ -4,17 +4,20 @@
   margin-left: calc(50% - 50vw); /* 左を画面幅いっぱいに広げる */
 }
 
-.service-01 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 90%; /* 画面幅の90% */
-  margin: 0 auto; /* 画面幅の中央に配置 */
-  gap: 3rem; /* スライダーと文章の間隔 */
+.service-02 {
+  padding: 5rem 2rem; /* 上下の余白 */
+  position: relative;
+  overflow: hidden;
 }
 
-.service-01__content {
-  flex: 3; /* 文字欄の幅 */
+.service-02__content {
+  max-width: 640px; /* 文字欄の最大幅 */
+  padding: 2rem; /* 上下の余白 */
+  border-radius: 10px; /* 角丸 */
+  background-color: #fff; /* 背景色 */
+  position: relative;
+  z-index: 1;
+  margin-left: auto;
 }
 
 /* --- 見出し01 --- */
@@ -32,10 +35,6 @@
   font-size: 1rem; /* フォントサイズ */
 }
 /* --- /見出し01 --- */
-
-.slider-fade {
-  flex: 4; /* スライダーの幅 */
-}
 
 /* ---------- リンクリスト ---------- */
 .link-list-01 {
@@ -72,58 +71,34 @@
 }
 /* ---------- /リンクリスト ---------- */
 
-/* ---------- フェードスライダー ---------- */
-/* フェードスライダー全体の枠設定 */
-.slider-fade {
-  position: relative;
-  width: 100%; /* 横幅 */
-  aspect-ratio: 4 / 3; /* 比率を変えたいときはここを調整 */
-  border-radius: 10px; /* 角丸 */
-}
-
-/* スライド画像の共通スタイル */
-.slide-item {
+/* --- マーキー（画像版） --- */
+.marquee-wrap-img {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+/* スライダーの中身を横並びに */
+.marquee-track {
+  display: flex;
+  width: max-content;
+  animation: marquee-img 20s linear infinite; /* スクロールのスピード*/
+}
+
+.marquee-track img {
+  width: 500px; /* 横幅 */
+  aspect-ratio: 3 / 5; /* アスペクト比を指定 */
+  flex-shrink: 0;
   object-fit: cover;
-  border-radius: 10px; /* 角丸 */
-  opacity: 0;
-  animation: fade 12s infinite; /* 画像枚数 × 4秒 */
 }
 
-/* 各画像にアニメーションの開始タイミングを指定 ※画像を増やした場合はここに追加する */
-.slide-item:nth-child(1) {
-  animation-delay: 0s;
-}
-.slide-item:nth-child(2) {
-  animation-delay: 4s;
-}
-.slide-item:nth-child(3) {
-  animation-delay: 8s;
-}
-/* 
-.slide-item:nth-child(4) { animation-delay: 12s; }
-.slide-item:nth-child(5) { animation-delay: 16s; }
-など、4秒ずつずらして追加する
-*/
-
-/* フェードイン・アウトのアニメーション定義 ※表示の長さを調整したいときはここの%を編集 */
-@keyframes fade {
+/* アニメーション */
+@keyframes marquee-img {
   0% {
-    opacity: 0;
-  }
-  5% {
-    opacity: 1;
-  }
-  30% {
-    opacity: 1;
-  }
-  35% {
-    opacity: 0;
+    transform: translateX(0);
   }
   100% {
-    opacity: 0;
+    transform: translateX(-50%);
   }
 }
-/* ---------- /フェードスライダー ---------- */
+/* --- /マーキー（画像版） --- */
