いろいろ修正

--- a/components/about-01/index.html
+++ b/components/about-01/index.html
@@ -9,14 +9,13 @@
     <link rel="stylesheet" href="../../shared/base.css">
 </head>
 
-<body style="width: 90%; max-width: 1200px; margin: 0 auto;">
-    <h1>会社案内01</h1>
+<body class="container">
     <section class="about-01">
         <div class="about-01__content">
             <!-- --- 見出し01 --- -->
             <h2 class="heading-01">
                 <span class="heading-sub">会社案内</span>
-                <span class="heading-main">About us</span>
+                <span class="heading-main">About</span>
             </h2>
             <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。
             </p>
