--- a/components/service-02/index.html
+++ b/components/service-02/index.html
@@ -35,30 +35,32 @@
                 </div>
             </div>
             <!-- ---------- /マーキー（画像版） ---------- -->
-            <div class="service-02__content">
-                <h2 class="heading-01">
-                    <span class="heading-main">サービス</span>
-                    <span class="heading-sub">Service</span>
-                </h2>
-                <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
+            <div class="container">
+                <div class="service-02__content">
+                    <h2 class="heading-01">
+                        <span class="heading-sub">サービスのご案内</span>
+                        <span class="heading-main">Service</span>
+                    </h2>
+                    <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
 
-                <ul class="link-list-01">
-                    <li><a href="#"><svg class="icon-arrow-simple">
-                                <use xlink:href="#icon-arrow-simple" />
-                            </svg> 土木工事</a></li>
-                    <li><a href="#"><svg class="icon-arrow-simple">
-                                <use xlink:href="#icon-arrow-simple" />
-                            </svg> 河川工事</a></li>
-                    <li><a href="#"><svg class="icon-arrow-simple">
-                                <use xlink:href="#icon-arrow-simple" />
-                            </svg> リフォーム</a></li>
-                    <li><a href="#"><svg class="icon-arrow-simple">
-                                <use xlink:href="#icon-arrow-simple" />
-                            </svg> クリーニング</a></li>
-                    <li><a href="#"><svg class="icon-arrow-simple">
-                                <use xlink:href="#icon-arrow-simple" />
-                            </svg> 産業廃棄物収集運搬</a></li>
-                </ul>
+                    <ul class="link-list-01">
+                        <li><a href="#"><svg class="icon-arrow-simple">
+                                    <use xlink:href="#icon-arrow-simple" />
+                                </svg> 土木工事</a></li>
+                        <li><a href="#"><svg class="icon-arrow-simple">
+                                    <use xlink:href="#icon-arrow-simple" />
+                                </svg> 河川工事</a></li>
+                        <li><a href="#"><svg class="icon-arrow-simple">
+                                    <use xlink:href="#icon-arrow-simple" />
+                                </svg> リフォーム</a></li>
+                        <li><a href="#"><svg class="icon-arrow-simple">
+                                    <use xlink:href="#icon-arrow-simple" />
+                                </svg> クリーニング</a></li>
+                        <li><a href="#"><svg class="icon-arrow-simple">
+                                    <use xlink:href="#icon-arrow-simple" />
+                                </svg> 産業廃棄物収集運搬</a></li>
+                    </ul>
+                </div>
             </div>
         </section>
     </div>
