--- a/components/card-01/index.html
+++ b/components/card-01/index.html
@@ -17,7 +17,7 @@
     </svg>
 </head>
 
-<body>
+<body class="container">
     <h1>カード-01</h1>
     <div class="card-01-wrap">
         <!-- カードa -->
