--- a/components/service-02/style.css
+++ b/components/service-02/style.css
@@ -5,31 +5,31 @@
 }
 
 .service-02 {
-  padding: 5rem 2rem; /* 上下の余白 */
+  padding: 5rem 0; /* 上下の余白 */
   position: relative;
   overflow: hidden;
 }
 
 .service-02__content {
-  max-width: 640px; /* 文字欄の最大幅 */
-  padding: 2rem; /* 上下の余白 */
+  max-width: 500px; /* 文字欄の最大幅 */
+  padding: clamp(2rem, 10vw, 5rem); /* 上下の余白 */
   border-radius: 10px; /* 角丸 */
   background-color: #fff; /* 背景色 */
   position: relative;
   z-index: 1;
-  margin-left: auto;
+  margin-left: auto; /* 右寄せ */
 }
 
 /* --- 見出し01 --- */
 .heading-01 * {
   display: block; /* ブロック要素にする */
   margin: 0; /* マージンリセット */
-  line-height: 1.25; /* 行間 */
+  line-height: 1; /* 行間 */
   font-weight: bold; /* フォントの太さ */
 }
 
 .heading-01 .heading-main {
-  font-size: 3rem; /* フォントサイズ */
+  font-size: clamp(3rem, 10vw, 5rem); /* フォントサイズ */
 }
 .heading-01 .heading-sub {
   font-size: 1rem; /* フォントサイズ */
