--- a/shared/components.css
+++ b/shared/components.css
@@ -29,28 +29,22 @@
 }
 /* ---------- /SVGアイコン ---------- */
 
-/* ---------- アイコンボタン ---------- */
-.icon-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 48px; /* （背景を含めた）アイコンの幅 */
-  height: 48px; /* （背景を含めた）アイコンの高さ */
-  position: relative;
+/* --- べた塗り丸ボタン --- */
+/* シンプルな直線矢印アイコン */
+.icon-arrow-simple {
+  color: #fff; /* アイコン線の色 */
+  background-color: #222; /* アイコンの背景色 */
+  border: solid 1px #222; /* アイコン背景の線 */
+  border-radius: 50%; /* アイコン背景を丸くする */
+  width: 2rem; /* 背景のサイズ */
+  height: 2rem; /* 背景のサイズ */
+  padding: 0.5rem; /* アイコンの内側余白 */
+  transition: all 0.1s ease; /* アイコンのホバーアニメーションの速度 */
 }
 
-/* ボタン背景 */
-.icon-btn__bg {
-  position: absolute;
-  inset: 0;
-  /*background: #fff;  背景色 */
-  border-radius: 50%; /* 背景を丸く */
+/* ホバー時 */
+a:hover .icon-arrow-simple {
+  color: #222; /* アイコン線の色 */
+  background-color: #fff; /* アイコンの背景色 */
 }
-
-/* ホバーの挙動 */
-/*
-.card-01:hover .icon-btn__bg {
-  transform: scale(1.3);
-}
-*/
-/* ---------- /アイコンボタン ---------- */
+/* --- /べた塗り丸ボタン --- */
