クラス名を整理

--- a/components/about-02/index.html
+++ b/components/about-02/index.html
@@ -23,26 +23,9 @@
 
         <!-- 画像群 -->
         <div class="about__imgs">
-            <!-- ---------- フェードスライダー1 ---------- -->
-            <div class="slider-fade img-1">
-                <img src="../../assets/sample-01.webp" class="slide-item" />
-                <img src="../../assets/sample-02.webp" class="slide-item" />
-            </div>
-            <!-- ---------- /フェードスライダー1 ---------- -->
-
-            <!-- ---------- フェードスライダー2 ---------- -->
-            <div class="slider-fade img-2">
-                <img src="../../assets/sample-03.webp" class="slide-item" />
-                <img src="../../assets/sample-04.webp" class="slide-item" />
-            </div>
-            <!-- ---------- /フェードスライダー2 ---------- -->
-
-            <!-- ---------- フェードスライダー3 ---------- -->
-            <div class="slider-fade img-3">
-                <img src="../../assets/sample-05.webp" class="slide-item" />
-                <img src="../../assets/sample-06.webp" class="slide-item" />
-            </div>
-            <!-- ---------- /フェードスライダー3 ---------- -->
+            <img src="../../assets/sample-01.webp" class="img-1">
+            <img src="../../assets/sample-02.webp" class="img-2">
+            <img src="../../assets/sample-03.webp" class="img-3">
         </div>
     </section>
 </body>
