--- a/components/about-01/style.css
+++ b/components/about-01/style.css
@@ -1,15 +1,15 @@
-/* --- 会社案内01 --- */
-.about-01 {
+/* --- 会社案内（共通） --- */
+.about {
   display: flex;
 }
 
 /* 文字欄 */
-.about-01__content {
+.about__content {
   flex: 2; /* 文字欄の幅 */
 }
 
-/* 画像欄 */
-.about-01__imgs {
+/* 画像群 */
+.about__imgs {
   position: relative; /* 画像の位置を相対的に配置 */
   flex: 3; /* 画像欄の幅 */
   aspect-ratio: 1; /* 比率を変えたいときはここを調整 */
@@ -28,14 +28,13 @@
   width: 50%; /* 画像の幅 */
   aspect-ratio: 3 / 4; /* アスペクト比を指定 */
 }
-
 .img-3 {
   top: 60%; /* 上からの位置 */
   left: 10%; /* 左からの位置 */
   width: 60%; /* 画像の幅 */
   aspect-ratio: 16 / 9; /* アスペクト比を指定 */
 }
-/* --- /会社案内01 --- */
+/* --- /会社案内（共通） --- */
 
 /* --- フェードスライダー --- */
 /* スライダー全体の枠設定 */
@@ -119,8 +118,8 @@
 /* --- /見出し01 --- */
 
 @media screen and (max-width: 767px) {
-  /* --- 会社案内01 --- */
-  .about-01 {
+  /* --- 会社案内（共通） --- */
+  .about {
     flex-direction: column; /* 縦並びに変更 */
   }
 }
