カード02追加

--- a/components/card-02/index.html
+++ b/components/card-02/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>カード-01</title>
+    <title>カード-02</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../shared/base.css">
     <!-- 右向き矢印アイコン（SVGスプライト定義） -->
@@ -18,61 +18,57 @@
 </head>
 
 <body class="container">
-    <h1>カード-01</h1>
-    <div class="full-bleed">
-        <div class="card-01">
-            <!-- カードa -->
-            <a href="#" class="card card--a">
-                <div class="card__imgs">
-                    <img src="../../assets/sample-01.webp" alt="">
-                </div>
+    <h1>カード-02</h1>
+    <section class="card-02">
+        <!-- カードa -->
+        <a href="#" class="card">
+            <div class="card__bg" style="background: url(' ../../assets/sample-01.webp') no-repeat center/cover;"></div>
+            <div class="card__content">
                 <h2 class="heading-01">
                     <span class="heading-sub">POINT</span>
-                    <span class="heading-main">働きやすいポイント</span>
+                    <span class="heading-main">働きやすい<br>ポイント</span>
                 </h2>
-                <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
                 <!-- 右向き矢印アイコン -->
                 <svg class="icon-arrow">
                     <use xlink:href="#icon-arrow"></use>
                 </svg>
-            </a>
-            <!-- /カードa -->
+            </div>
+        </a>
+        <!-- /カードa -->
 
-            <!-- カードb -->
-            <a href="#" class="card card--b">
-                <div class="card__imgs">
-                    <img src="../../assets/sample-02.webp" alt="">
-                </div>
+        <!-- カードb -->
+        <a href="#" class="card">
+            <div class="card__bg" style="background: url(' ../../assets/sample-02.webp') no-repeat center/cover;"></div>
+            <div class="card__content">
                 <h2 class="heading-01">
                     <span class="heading-sub">DATA</span>
-                    <span class="heading-main">データで分かる会社</span>
+                    <span class="heading-main">データで<br>分かる会社</span>
                 </h2>
-                <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
                 <!-- 右向き矢印アイコン -->
                 <svg class="icon-arrow">
                     <use xlink:href="#icon-arrow"></use>
                 </svg>
-            </a>
-            <!-- /カードb -->
+            </div>
+        </a>
+        <!-- /カードb -->
 
-            <!-- カードc -->
-            <a href="#" class="card card--c">
-                <div class="card__imgs">
-                    <img src="../../assets/sample-03.webp" alt="">
-                </div>
+        <!-- カードc -->
+        <a href="#" class="card">
+            <div class="card__bg" style="background: url(' ../../assets/sample-03.webp') no-repeat center/cover;"></div>
+            <div class="card__content">
                 <h2 class="heading-01">
                     <span class="heading-sub">CAREERS</span>
                     <span class="heading-main">募集要項</span>
                 </h2>
-                <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
                 <!-- 右向き矢印アイコン -->
                 <svg class="icon-arrow">
                     <use xlink:href="#icon-arrow"></use>
                 </svg>
-            </a>
-            <!-- /カードc -->
-        </div>
-    </div>
+            </div>
+        </a>
+        <!-- /カードc -->
+    </section>
+
 </body>
 
 </html>
