--- a/components/card-01/style.css
+++ b/components/card-01/style.css
@@ -1,12 +1,12 @@
 /* ---------- カード01 ---------- */
 /* カード全体のスタイル */
-.card-01-wrap {
+.card-01 {
   display: flex;
-  gap: 1rem; /*カードの間隔 */
+  /*gap: 1rem; カードの間隔 */
 }
 
 /* カード本体のスタイル */
-.card-01 {
+.card-01 .card {
   /*border-radius: 8px;  角丸 */
   overflow: hidden;
   padding: 2rem; /* 内側の余白 */
@@ -17,22 +17,22 @@
 }
 
 /* カード内全要素のマージンリセット */
-.card-01 * {
+.card-01 .card * {
   margin: 0;
 }
 
 /* カードa */
-.card-01--a {
+.card-01 .card--a {
   background-color: #ccc;
 }
 
 /* カードb */
-.card-01--b {
+.card-01 .card--b {
   background-color: #ddd;
 }
 
 /* カードc */
-.card-01--c {
+.card-01 .card--c {
   background-color: #eee;
 }
 
@@ -53,14 +53,14 @@
 /* --- /見出し01 --- */
 
 /* カード内画像ラッパー */
-.card-01__image {
+.card-01 .card__imgs {
   overflow: hidden;
   aspect-ratio: 4 / 3 /* アスペクト比を指定 */;
   border-radius: 8px; /* 画像の角丸 */
 }
 
 /* カード内画像本体 */
-.card-01__image img {
+.card-01 .card__imgs img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -82,10 +82,10 @@
 }
 
 /* ホバーの挙動 */
-.card-01:hover .card-01__image img {
+.card-01 .card:hover .card__imgs img {
   transform: scale(1.3); /* 拡大率 */
 }
-.card-01:hover .icon-arrow {
+.card-01 .card:hover .icon-arrow {
   color: #222; /* アイコン線の色 */
   background-color: #fff; /* アイコンの背景色 */
 }
@@ -93,7 +93,7 @@
 
 @media screen and (max-width: 767px) {
   /* カード01 */
-  .card-01-wrap {
+  .card-01 {
     flex-direction: column; /* 縦並びに変更 */
   }
 }
