--- a/shared/base.css
+++ b/shared/base.css
@@ -38,3 +38,9 @@ body {
   margin: 0 auto;
   padding: 0 20px;
 }
+
+/* コンテンツを中央から左右にはみ出させて、画面幅いっぱいに広げる */
+.full-bleed {
+  margin-right: calc(50% - 50vw); /* 右を画面幅いっぱいに広げる */
+  margin-left: calc(50% - 50vw); /* 左を画面幅いっぱいに広げる */
+}
