アニメーション系更新

--- a/components/about-02/index.html
+++ b/components/about-02/index.html
@@ -17,6 +17,7 @@
                 <span class="heading-sub">会社案内</span>
                 <span class="heading-main">About</span>
             </h2>
+            <!-- --- /見出し01 --- -->
             <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。
             </p>
         </div>
@@ -27,6 +28,7 @@
             <img src="../../assets/sample-02.webp" class="img-2">
             <img src="../../assets/sample-03.webp" class="img-3">
         </div>
+        <!-- /画像群 -->
     </section>
 </body>
 
