--- a/components/about-02/style.css
+++ b/components/about-02/style.css
@@ -1,4 +1,4 @@
-/* --- 会社案内（共通） --- */
+/* --- 会社案内 --- */
 .about {
   display: flex;
 }
@@ -41,7 +41,7 @@
   width: 60%; /* 画像の幅 */
   aspect-ratio: 16 / 9; /* アスペクト比を指定 */
 }
-/* --- /会社案内（共通） --- */
+/* --- /会社案内 --- */
 
 /* --- 見出し01 --- */
 .heading-01 * {
@@ -60,7 +60,7 @@
 /* --- /見出し01 --- */
 
 @media screen and (max-width: 767px) {
-  /* --- 会社案内（共通） --- */
+  /* --- 会社案内 --- */
   .about {
     flex-direction: column; /* 縦並びに変更 */
   }
