--- a/components/about-01/index.html
+++ b/components/about-01/index.html
@@ -17,6 +17,7 @@
                 <span class="heading-sub">会社案内</span>
                 <span class="heading-main">About</span>
             </h2>
+            <!-- --- /見出し01 --- -->
             <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。
             </p>
         </div>
@@ -44,6 +45,7 @@
             </div>
             <!-- ---------- /フェードスライダー3 ---------- -->
         </div>
+        <!-- /画像群 -->
     </section>
 </body>
 
