メディアクエリ更新

--- a/components/about-02/style.css
+++ b/components/about-02/style.css
@@ -59,7 +59,7 @@
 }
 /* --- /見出し01 --- */
 
-@media screen and (max-width: 767px) {
+@media (max-width: 767px) {
   /* --- 会社案内 --- */
   .about {
     flex-direction: column; /* 縦並びに変更 */
