--- a/components/about-01/style.css
+++ b/components/about-01/style.css
@@ -117,7 +117,7 @@
 }
 /* --- /見出し01 --- */
 
-@media screen and (max-width: 767px) {
+@media (max-width: 767px) {
   /* --- 会社案内（共通） --- */
   .about {
     flex-direction: column; /* 縦並びに変更 */
