--- a/components/card-01/style.css
+++ b/components/card-01/style.css
@@ -91,7 +91,7 @@
 }
 /* ---------- /カード01 ---------- */
 
-@media screen and (max-width: 767px) {
+@media (max-width: 767px) {
   /* カード01 */
   .card-01 {
     flex-direction: column; /* 縦並びに変更 */
